# 6502_Kernel

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  TODO.md  build.sh
.claude/: AGENT_ROLE_MAPPING.md  QUEUE_SYSTEM_GUIDE.md  README.md  TASK_PROMPT_DEFAULTS.md  TESTING_RESULTS.md  WORKFLOW_STEP_TEMPLATE.md  settings.json
.claude/agents/: AGENT_TEMPLATE.md  accessibility-specialist.md  agent-architect.md  agents.json  api-integration-specialist.md  architect.md  assembly-developer.md  assembly-implementer.md  atlassian-integration-coordinator.md  code-reviewer.md  cpp-developer.md  data-engineer.md  devops-engineer.md  documentation_agent.md  documenter.md  generate_agents_json.sh  github-integration-coordinator.md  implementer.md  performance-engineer.md  product-analyst.md  refactoring-specialist.md  requirements-analyst.md  retrospective.md  security-auditor.md  tester.md  testing-agent.md  work-validator.md
.claude/queues/: queue_manager.sh  task_queue.json  workflow_templates.json
.claude/skills/: skills.json
.claude/skills/api-integration/: SKILL.md
.claude/skills/ci-cd-pipelines/: SKILL.md
.claude/skills/container-orchestration/: SKILL.md
.claude/skills/data-modeling/: SKILL.md
.claude/skills/data-quality/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/etl-design/: SKILL.md
.claude/skills/infrastructure-as-code/: SKILL.md
.claude/skills/keyboard-navigation/: SKILL.md
.claude/skills/load-testing/: SKILL.md
.claude/skills/logging-strategies/: SKILL.md
.claude/skills/metrics-monitoring/: SKILL.md
.claude/skills/optimization-patterns/: SKILL.md
.claude/skills/performance-profiling/: SKILL.md
.claude/skills/rate-limiting/: SKILL.md
.claude/skills/screen-reader-testing/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/tech-debt-assessment/: SKILL.md
.claude/skills/threat-modeling/: SKILL.md
.claude/skills/vulnerability-scanning/: SKILL.md
.claude/skills/wcag-compliance/: SKILL.md
.claude/skills/webhook-design/: SKILL.md
Computer/: CPU6502.cpp  CPU6502.h  Computer6502.cpp  Memory.cpp  Memory.h  PIA.cpp  PIA.h  ResetCircuit.cpp  ResetCircuit.h  TimingCircuit.cpp  TimingCircuit.h  VIC.cpp
Context/: UI.md  kernel_flow.md  monitor_requirements.md  screen_editor_requirements.md
Kernel/: kernel.asm  kernel.map  kernel.rom  kernel_call_tree.md  kernel_memory_map.md  memory.cfg
UI/: DisplayWidget.cpp  MainWindow.cpp  MainWindow.h
User/: add_print.asm  hello_world.asm
docs/: basic_label_glossary.md  command_help.md  decimal_to_hex_command.md  dos_design.md  fill_command.md  hex_to_decimal_command.md  kernel_call_tree.md  kernel_command_infrastructure.md  kernel_memory_map.md  kernel_user_functions.md  load_command.md  module_slot_design.md  move_copy_command.md  opcode_table_65c02.md  read_command.md  research_references.md  run_command.md  save_command.md  search_command.md  system_architecture.md  write_command.md
enhancements/add-basic-interpreter/: ANALYSIS_COMPLETE.md  ANALYST_STATUS.md  IMPLEMENTER_ANALYSIS.md  IMPLEMENTER_STATUS.md  README.md  add-basic-interpreter.md  analysis_summary.md  assembly-developer-summary.md  basic-integration-architecture.md  basic-memory-analysis.md  implementation-plan.md  integration-architecture.md  memory_conflict_analysis.md  milestone4_step4_test_plan.md  milestone4_test_plan.md  requirements_analysis.md  test_plan.md  test_summary.md  test_summary_previous.md
enhancements/dec-to-hex-conversion/: IMPLEMENTATION_READY.md  README.md  algorithm_flowchart.md  analysis_summary.md  dec_to_hex_enhancement.md  decision_log.md  design_summary.md  implementation_plan.md  quick_reference.md  requirements_refined.md  technical_architecture.md  test_plan.md
enhancements/fix-basic-number-display/: fix-basic-number-display.md
enhancements/fix-curr-addr-update/: bugfix_tz_curr_addr.md
enhancements/hex-to-dec-conversion/: IMPLEMENTATION_COMPLETE.md  analysis_summary.md  hex_to_dec_enhancement.md  implementation_plan.md  requirements_specification.md  technical_specification.md  test_plan.md
enhancements/improve-cmd-parsing/: improve_cmd_parsing.md
enhancements/test-workflow-demo/: demo_command_structure.txt  demo_hardware_interface.txt  demo_memory_layout.txt  implementation_notes.md  test-workflow-demo.md  test-workflow-demo_architecture.md  test-workflow-demo_command_reference.md  test-workflow-demo_requirements_analysis.md  test-workflow-demo_testing_validation.md
examples/: random_numbers.asm
include/computer/: BlockDevice.h  CPU6502.h  Computer6502.h  MapFileParser.h  Memory.h  PIA.h  ResetCircuit.h  TimingCircuit.h  VIC.h
include/ui/: DisplayWidget.h  MainWindow.h
src/: CMakeLists.txt  main.cpp
src/6502-kernel_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/6502-kernel_autogen/GAHUQPC7KX/: moc_DisplayWidget.cpp  moc_DisplayWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
src/computer/: BlockDevice.cpp  CPU6502.cpp  Computer6502.cpp  MapFileParser.cpp  Memory.cpp  PIA.cpp  ResetCircuit.cpp  TimingCircuit.cpp  VIC.cpp
src/kernel/: basic.asm  basic_memory.cfg  kernel.asm  memory.cfg
src/kernel/assembler/: assembler.asm  assembler_memory.cfg  opcodes_65c02.inc
src/kernel/devtools/: devtools.asm  devtools_memory.cfg  opcodes_65c02.inc
src/kernel/dos/: dos.asm  dos_memory.cfg
src/ui/: DisplayWidget.cpp  MainWindow.cpp
tests/: CMakeLists.txt  README.md  test_advanced_commands.cpp  test_block_device.cpp  test_cpu_alu.cpp  test_dos_blockio.cpp  test_dos_fat16.cpp  test_memory_banking.cpp  test_monitor_integration.cpp
tests/scripts/: validate_memory_layout.cmake  validate_rom.cmake
tests/support/: fat16_image.h
tools/: gen_opcode_table.py
tools/cmake/: BuildKernel.cmake  FindQt.cmake  check_basic_size.cmake  rom_size.cmake  update_header.cmake
tools/mkfat16/: mkfat16.cpp
